@@ -1,5 +1,6 @@
 Version 0.4 (14/01/2017): 
 - add logistic loss in MLGL, cv.MLGL, stability and overlap
+- add sample size parameter in fullProcess
 
 Version 0.3.2 (30/09/2016): 
 - optimization of hierarchicalFWER
